final requirements
