# routes/categories.js
@@ -2,14 +2,14 @@ const express = require('express');
 const router = express.Router();
 const categoriesController = require('../controllers/categories');
 const validate = require('../middleware/validate');
+const { requiresAuth } = require('express-openid-connect');
 
 router.get('/', categoriesController.getAll);
 router.get('/:id', categoriesController.getSingle);
 
-// Validation middleware added before the controller function
-router.post('/', validate.saveCategory, categoriesController.createCategory);
-router.put('/:id', validate.saveCategory, categoriesController.updateCategory);
-
-router.delete('/:id', categoriesController.deleteCategory);
+// Validation and OAuth added before the controller function
+router.post('/', requiresAuth(), validate.saveCategory, categoriesController.createCategory);
+router.put('/:id', requiresAuth(), validate.saveCategory, categoriesController.updateCategory);
+router.delete('/:id', requiresAuth(), categoriesController.deleteCategory);
 
 module.exports = router;
